[package]
name = "ublox-sockets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fugit = "0.3"
serde = { version = "^1", default-features = false, features = ["derive"] }
heapless = { version = "^0.7", features = ["serde"] }
no-std-net = { version = "^0.5", features = ["serde"] }
embedded-nal = "0.6.0"
nb = "^1"
#atat = { version = "0.13.1", features = ["derive"] }
atat = { git = "https://github.com/BlackbirdHQ/atat.git", features = ["derive"] }
hash32 = "0.2.1"
hash32-derive = "^0.1.0"

log = { version = "^0.4", default-features = false, optional = true }
defmt = { version = "^0.2", optional = true }

[dev-dependencies]
embedded-hal = { version = "=1.0.0-alpha.4" }

[features]
default = ["socket-udp", "socket-tcp"]

socket-tcp = []
socket-udp = []

defmt-default = ["defmt"]
defmt-trace = ["defmt"]
defmt-debug = ["defmt"]
defmt-info = ["defmt"]
defmt-warn = ["defmt"]
defmt-error = ["defmt"]
