[package]
name = "ublox-sockets"
version = "0.3.0"
edition = "2021"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "Common sockets layer for host-based ublox devices"
readme = "README.md"
keywords = ["arm", "cortex-m", "AT", "no-std"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/ublox-sockets"
documentation = "https://docs.rs/ublox-sockets"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fugit = "0.3"
serde = { version = "^1", default-features = false, features = ["derive"] }
heapless = { version = "^0.7", features = ["serde"] }
no-std-net = { version = "^0.5", features = ["serde"] }
embedded-nal = "0.6.0"
nb = "^1"
atat = { version = "0.16.0", features = ["derive"] }
hash32 = "0.2.1"
hash32-derive = "^0.1.0"

log = { version = "^0.4", default-features = false, optional = true }
defmt = { version = "^0.3", optional = true }

[dev-dependencies]
embedded-hal = { version = "=1.0.0-alpha.6" }

[features]
default = ["socket-udp", "socket-tcp"]

socket-tcp = []
socket-udp = []
